--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -1,47 +1,39 @@
 version: '3'
-
 services:
   app:
     container_name: chatgpt-web
-    image: chenzhaoyu94/chatgpt-web # 总是使用latest,更新时重新pull该tag镜像即可
+    image: thlearn/chatgpt-web:simple
     ports:
-      - 3002:3002
+      - 6666:3002
     environment:
-      # 二选一
-      OPENAI_API_KEY:
-      # 二选一
-      OPENAI_ACCESS_TOKEN:
-      # API接口地址，可选，设置 OPENAI_API_KEY 时可用
-      OPENAI_API_BASE_URL:
-      # API模型，可选，设置 OPENAI_API_KEY 时可用
-      OPENAI_API_MODEL:
+      # OPENAI_API_KEY: 
       # 反向代理，可选
-      API_REVERSE_PROXY:
+      API_REVERSE_PROXY: http://PandoraNext:8181/backend-api/conversation
+      OPENAI_ACCESS_TOKEN: 
       # 访问权限密钥，可选
-      AUTH_SECRET_KEY:
+      AUTH_SECRET_KEY: 
+      # API接口地址，可选，设置 OPENAI_API_KEY 时可用
+      # OPENAI_API_BASE_URL: 
+      # API模型，可选，设置 OPENAI_API_KEY 时可用
+      OPENAI_API_MODEL: gpt-3.5
+      # gpt-4, gpt-4-0314, gpt-4-0613, gpt-4-32k, gpt-4-32k-0314, gpt-4-32k-0613, gpt-3.5-turbo-16k, gpt-3.5-turbo-16k-0613, gpt-3.5-turbo, gpt-3.5-turbo-0301, gpt-3.5-turbo-0613, text-davinci-003, text-davinci-002, code-davinci-002
       # 每小时最大请求次数，可选，默认无限
       MAX_REQUEST_PER_HOUR: 0
       # 超时，单位毫秒，可选
       TIMEOUT_MS: 60000
+    networks:
+      - mynetwork
       # Socks代理，可选，和 SOCKS_PROXY_PORT 一起时生效
-      SOCKS_PROXY_HOST:
+      # SOCKS_PROXY_HOST:
       # Socks代理端口，可选，和 SOCKS_PROXY_HOST 一起时生效
-      SOCKS_PROXY_PORT:
+      # SOCKS_PROXY_PORT:
       # Socks代理用户名，可选，和 SOCKS_PROXY_HOST & SOCKS_PROXY_PORT 一起时生效
-      SOCKS_PROXY_USERNAME:
+      # SOCKS_PROXY_USERNAME:
       # Socks代理密码，可选，和 SOCKS_PROXY_HOST & SOCKS_PROXY_PORT 一起时生效
-      SOCKS_PROXY_PASSWORD:
+      # SOCKS_PROXY_PASSWORD:
       # HTTPS_PROXY 代理，可选
-      HTTPS_PROXY:
-  nginx:
-    container_name: nginx
-    image: nginx:alpine
-    ports:
-      - '80:80'
-    expose:
-      - '80'
-    volumes:
-      - ./nginx/html:/usr/share/nginx/html
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-    links:
-      - app
+      # HTTPS_PROXY:
+networks:
+  mynetwork:
+    external: true
+
