--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   app:
     container_name: chatgpt-web
-    image: thlearn/chatgpt-web:simple
+    image: thlearn/chatgpt-web
     ports:
       - 6666:3002
     environment:
